--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,6 +10,21 @@ input[type=radio],
 input[type=checkbox]{
   width:auto;
 }
+.smallcard img{
+  width:auto;
+  height:150px;
+  margin-bottom: 0px;
+}
+.smallcard .title {
+  color: rgb(229, 162, 162);
+  font-weight: bold;
+  font-size: 20px;
+  
+}
+.empty-holder{
+  color:rgba(0, 0, 0, .6);
+  font-size: 13px;
+}
 
 body{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -127,4 +142,15 @@ td{
 .disabled{
   pointer-events: none;
   opacity: 0.7;
+}
+
+.card {
+  margin-top: 0;
+  border: 2px solid rgb(229, 162, 162);
+}
+.card:hover {
+  background: #fff;
+}
+.smallcard {
+  padding: 15px;
 }
